# littlelisa_greenhouse

./: .gitignore  CMakeLists.txt  README.md  cspell.json  nohup.out  package-lock.json  sdkconfig  sdkconfig.defaults  sdkconfig.old
.devcontainer/: devcontainer.json
.docker/: Dockerfile
app/: app.json  package-lock.json  package.json
backend/: index.js  nodemon.json  nohup.out  package-lock.json  package.json
backend/config/: default.json  globals.js  laptop.json  littlelisa.json  shop.json
backend/logs/: data_logs.js
backend/migrations/: 1716190821674_initial-scheme.cjs  1716194980163_initial-data.cjs  1716197808279_dht22-sensor-type.cjs  1716201239306_sqaure-relative-to-zone.cjs  1716203972666_sqaure-relative-to-zone-v2.cjs  1716280707150_change-owner-id-column-name.cjs  1716520460531_fix-square-speeling-error.cjs  1716521256387_add-default-for-sqaure-is-empty.cjs  1716679193045_add-notes-table.cjs  1716680206236_existing-notes-from-squares.cjs  1716680435001_add-user-to-notes.cjs  1716681362594_add-title-to-notes.cjs  1716735775969_change-toggle-empty-if-plant-present.cjs  1717028784708_delete-log-tables.cjs  1717069205923_action-log.cjs  1717079722400_drop-state.cjs  1717098767701_add-square-check-function.cjs  1717098984618_insert-log-zone-trigger.cjs  1717101781551_add-note-zone-trigger.cjs
backend/migrations/sql/: little_lisa_v1_initial_schema.sql
backend/nginx/conf/: test
backend/node_js/: nohup.out  package-lock.json  package.json  server.js
backend/node_js/public/: index.js  old_landing.html
backend/public/: index.html
backend/src/config/: express_webServer.js  globals.js  log_config.js  pgresql_database.js
backend/src/init/: dbConnect.js  expressServer.js
backend/src/services/: esp32CommunicationService.js  pg_db.js
backend/src/streaming/: camBufferService.js  camControllers.js  camRoutes.js
database/: admin_littlelisa.session.sql
database/supabase_proto/: edits.sql  hierarchical_view  littlelisa_proto.sql  littlelisa_proto_constraints.sql  organic_view
esp-idf/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
esp-idf/camtest6/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp-idf/components/networking/: CMakeLists.txt  esp_now_comm.c  http_client.c  http_handlers.c  http_server.c  sntp.c  websocket_server.c  wifi_ap_sta.c
esp-idf/components/networking/include/: esp_now_comm.h  http_client.h  http_handlers.h  sntp.h  websocket_server.h  wifi_ap_sta.h
esp-idf/components/networking/landing_page/: index.css  index.html  index.js
esp-idf/components/networking/landing_page/assets/: index.css  index.js
esp-idf/components/nvs_config/: CMakeLists.txt  module_config.c  node_info.c  nvs_service.c
esp-idf/components/nvs_config/include/: module_config.h  node_info.h
esp-idf/components/sensors/: CMakeLists.txt  DHT22.c  sensor_helpers.c  sensor_tasks.c
esp-idf/components/sensors/include/: DHT22.h  sensor_tasks.h
esp-idf/esp_cam/: CMakeLists.txt
esp-idf/esp_main_controller_landing_page/: app.css
esp-idf/esp_updates/: hexhump.txt
esp-idf/little_lisa/: sdkconfig  sdkconfig.old
esp-idf/little_lisa/components/nvs_config/: CMakeLists.txt  Kconfig.projbuild  env_cntrl.c  module_config.c  node_info.c  nvs_service.c  tempCodeRunnerFile.c
esp-idf/little_lisa/components/nvs_config/include/: env_cntrl.h  module_config.h  node_info.h  nvs_service.h
esp-idf/little_lisa/components/peripherals/: CMakeLists.txt  led.c  rtc_DS1302.c
esp-idf/little_lisa/components/peripherals/include/: ds1302.h  led.h  rtc_DS1302.h  spi_sd_card.h
esp-idf/little_lisa/components/periphials/: CMakeLists.txt  ds1302.c  env_cntrl.c  led.c  spi_sd_card.c
esp-idf/little_lisa/components/periphials/include/: ds1302.h  env_cntrl.h  led.h
esp-idf/little_lisa/components/sensors/: CMakeLists.txt  DHT22.c  sensor_helpers.c  sensor_tasks.c
esp-idf/little_lisa/components/sensors/include/: DHT22.h  sensor_helpers.h  sensor_tasks.h
esp-idf/main/: CMakeLists.txt  DHT22.c  DHT22.h  Kconfig  helper.c  helper.h  http_server.c  led.c  led.h  main.c  node_info.c  node_info.h  nvs_service.c  nvs_service.h  rtc_DS1302.h  sntp.c  sntp_rtc.c  sntp_rtc.h  spi_sd_card.c  spi_sd_card.h  task_common.h  wifi_app.c  wifi_app.h
esp-idf/main/esp_main_controller_landing_page/: app.js  index.html
esp-idf/main/include/: helper.h  task_common.h
esp-idf/main/landing_page/: index.html
esp-idf/main/landing_page/assets/: index.js
esp-idf/main/module_components/: DHT22.c  DHT22.h  ds1302.h  led.c  sd_card_db.c  sd_card_db.h  spi_sd_card.c  spi_sd_card.h
esp-idf/main/network_components/: Kconfig.projbuild  esp_now_comm.c  esp_now_comm.h  http_handlers.c  http_handlers.h  http_server.c  http_server.h  sntp.c  sntp.h  websocket_server.c  websocket_server.h  wifi_ap_sta.c  wifi_ap_sta.h  wifi_app.c  wifi_app.h
esp-idf/main/new_landing_page/assets/: index-Brmxup6R.js  index-Cjz8_SRG.css
esp-idf/main/nvs_components/: Kconfig.projbuild  module_config.c  module_config.h  node_info.c  node_info.h  nvs_service.c  nvs_service.h
esp-idf/main/sensor_components/: DHT22.c  DHT22.h  sensor_tasks.c  sensor_tasks.h
esp-idf/main/web/esp_main_controller_landing_page/: index.html
esp-idf/partition_table/: partitionTable.csv
frontend/: package-lock.json  package.json
frontend/debug_page/: package-lock.json  package.json
frontend/inspiration/: dash4.avif
frontend/littlelisa_dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/littlelisa_debug_page/: index.html  package-lock.json  package.json  vite.config.js
frontend/littlelisa_landing_page/: crossref.html  index.html  package-lock.json  package.json
frontend/react-app/: package-lock.json  package.json
main/: CMakeLists.txt  DHT22.c  DHT22.h  http_server.c  http_server.h  main.c  nvs_service.c  nvs_service.h  rgb_led.c  rgb_led.h  task_common.h  wifi_app.c  wifi_app.h
main/website/: app.css  app.js  index.html
misc_mc/atiny85/: a.hex  a.out  light_test.c
node_js/: server.js
node_js/public/: index.html
partition_table/: partitionTable.csv
(+281 files in other folders)
